# gosCLI

./: .env.example  .gitignore  README.md  debug_mermaid.py  examples.py  examples_indonesian.py  pyproject.toml  test_imports.py  test_ui.py  test_ui_indonesian.py
goscli/: __init__.py  __main__.py  main.py
goscli/core/: __init__.py  analysis_service.py  command_handler.py  find_service.py
goscli/core/services/: __init__.py  analysis_service.py  chat_service.py  find_service.py
goscli/domain/: __init__.py
goscli/domain/events/: __init__.py  api_events.py
goscli/domain/interfaces/: __init__.py  ai_model.py  cache.py  config.py  file_system.py  filesystem.py  output_processor.py  user_interface.py
goscli/domain/models/: __init__.py  ai.py  analysis.py  chat.py  common.py
goscli/infrastructure/: __init__.py  config.py
goscli/infrastructure/agents/: basic_processor.py  execution_decider.py  qa_agent.py
goscli/infrastructure/ai/: __init__.py  gpt_client.py
goscli/infrastructure/cache/: __init__.py  caching_service.py
goscli/infrastructure/cli/: __init__.py  display.py
goscli/infrastructure/config/: __init__.py  settings.py
goscli/infrastructure/filesystem/: __init__.py  local_fs.py
goscli/infrastructure/localization/: __init__.py  language_processor.py  translation_service.py
goscli/infrastructure/monitoring/: __init__.py  logger_setup.py
goscli/infrastructure/optimization/: __init__.py  (+2 more)
goscli/utils/: mermaid_generator.py
goscli_cache/: cache.db  cache.db-shm  cache.db-wal
tests/: conftest.py
tests/integration/: test_cli_flow.py
(+18 files in other folders)
